test/cli/test-mutating-policy/patched-resource-negative/resources.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: expected-pass
  namespace: default
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: expected-fail
  namespace: default
