test/cli/test-mutating-policy/patched-resource-negative/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: patched-resource-negative
policies:
- policy.yaml
resources:
- resources.yaml
results:
- isMutatingPolicy: true
  kind: ConfigMap
  patchedResources: results.yaml
  policy: test-mutation
  resources:
  - default/expected-fail
  result: fail
- isMutatingPolicy: true
  kind: ConfigMap
  patchedResources: results.yaml
  policy: test-mutation
  resources:
  - default/expected-pass
  result: pass
